<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Navigation -->
    <string name="next">Next</string>
    <string name="previous">Prev</string>
    <string name="done">Done</string>
    <string name="confirm">Confirm</string>
    <string name="sign_up">Sign Up for a Library Card</string>

    <!-- Review -->
    <string name="quit">Quit</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="review">Review</string>
    <string name="valid_address_subheader">This valid address will result in a temporary </string>
    <string name="creating_card">Creating card&#8230;</string>

    <!-- Personal Information -->
    <string name="personal_information">Personal Information</string>
    <string name="first_name">FIRST NAME</string>
    <string name="middle_name">MIDDLE NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="birth_date">BIRTH DATE</string>
    <string name="under_13_warning">You must be 13 years of age or older to sign up for a library card.</string>
    <string name="enter_birth_date_warning">Please enter a valid birthdate</string>

    <!-- Out-of-State -->
    <string name="out_of_state_address">Out-of-State Address</string>
    <string name="out_of_state_subheader">Since you do not live in New York, you must work or attend school in New York to qualify for a library card.</string>
    <string name="work_in_ny">I work in New York</string>
    <string name="school_in_ny">I attend school in New York</string>

    <!-- Confirmation -->
    <string name="create_card">Create Card</string>
    <string name="save_card">Save Card</string>
    <string name="confirmation">Confirmation</string>
    <string name="card_saved">Card saved</string>
    <string name="user_card_number">Card Number: %1$s</string>
    <string name="user_password">Password: %1$s</string>
    <string name="issued_date">Issued: %1$s</string>

    <!-- Account Information -->
    <string name="account_information">Account Information</string>
    <string name="username_desc">Usernames must be 5–25 letters or numbers only. Passwords must be 8–32 characters and not contain any of the following characters: \&lt;, \&gt;, \\, /.</string>
    <string name="validating_username">Validating username&#8230;</string>

    <!-- Home Address -->
    <string name="home_address">Home Address</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>
    <string name="street_1">Street 1</string>
    <string name="street_2">Street 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string-array name="states_array">
        <item>Required</item>
        <item>Alabama (AL)</item>
        <item>Alaska (AK)</item>
        <item>Arizona (AZ)</item>
        <item>Arkansas (AR)</item>
        <item>California (CA)</item>
        <item>Colorado (CO)</item>
        <item>Connecticut (CT)</item>
        <item>Delaware (DE)</item>
        <item>Florida (FL)</item>
        <item>Georgia (GA)</item>
        <item>Hawaii (HI)</item>
        <item>Idaho (ID)</item>
        <item>Illinois (IL)</item>
        <item>Indiana (IN)</item>
        <item>Iowa (IA)</item>
        <item>Kansas (KS)</item>
        <item>Kentucky (KY)</item>
        <item>Louisiana (LA)</item>
        <item>Maine (ME)</item>
        <item>Maryland (MD)</item>
        <item>Massachusetts (MA)</item>
        <item>Michigan (MI)</item>
        <item>Minnesota (MN)</item>
        <item>Mississippi (MS)</item>
        <item>Missouri (MO)</item>
        <item>Montana (MT)</item>
        <item>Nebraska (NE)</item>
        <item>Nevada (NV)</item>
        <item>New Hampshire (NH)</item>
        <item>New Jersey (NJ)</item>
        <item>New Mexico (NM)</item>
        <item>New York (NY)</item>
        <item>North Carolina (NC)</item>
        <item>North Dakota (ND)</item>
        <item>Ohio (OH)</item>
        <item>Oklahoma (OK)</item>
        <item>Oregon (OR)</item>
        <item>Pennsylvania (PA)</item>
        <item>Rhode Island (RI)</item>
        <item>South Carolina (SC)</item>
        <item>South Dakota (SD)</item>
        <item>Tennessee (TN)</item>
        <item>Texas (TX)</item>
        <item>Utah (UT)</item>
        <item>Vermont (VT)</item>
        <item>Virginia (VA)</item>
        <item>Washington (WA)</item>
        <item>West Virginia (WV)</item>
        <item>Wisconsin (WI)</item>
        <item>Wyoming (WY)</item>
    </string-array>

    <!-- Confirm Home Address -->
    <string name="confirm_home_address">Confirm Home Address</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="your_address">Your Address:</string>
    <string name="confirm_address_subheader">Tap confirm if this looks correct or previous to edit.</string>

    <!-- Alternate Address -->
    <string name="work_address">Work Address</string>
    <string name="school_address">School Address</string>

    <!-- Confirm Alternate Address -->
    <string name="confirm_work_address">Confirm Work Address</string>
    <string name="confirm_school_address">Confirm School Address</string>

    <!-- Age -->
    <string name="age_description">To obtain a digital library card from the New York Public Library, you must live, work, or attend school in New York State. You must also be at least 13 years of age and be physically present in New York at the time of sign-up.  \n\nYou must be 13 years of age or older to sign up for a library card. How old are you?</string>
    <string name="under_13">Under 13</string>
    <string name="over_13">13 or Older</string>
    <string name="eula_checkbox">I agree to the terms of the End User License Agreement.</string>
    <string name="age_error">You are not old enough to sign up for a library card.</string>
    <string name="validating_location">Validating your location</string>
    <string name="eula"><u>End User License Agreement</u></string>

    <!-- Juvenile Policy -->
    <string name="juvenile_policy">To apply for a card for your under-13 child, you must be the parent/legal guardian of the minor in question and be physically present in New York State at the time of sign-up.\n\n
    Please check the box below to confirm you are the legal guardian of the minor child for whom the card will be used.
    </string>
    <string name="juvenile_policy_checkbox">By checking this box, I confirm that I am the parent / legal guardian of the minor for whom I am creating a library card account.</string>
    <string name="read_eula">I have read and agree to the End User License Agreement.</string>
    <string name="create_child_card">Create Card for your Child</string>
    <string name="legal_disclaimer">I have read and agree to the End User License Agreement and the Legal Disclaimer.</string>

    <!-- Location -->
    <string name="checking_location">Checking location&#8230;</string>
    <string name="location_check">Location Check</string>
    <string name="location">Location</string>
    <string name="location_error">You must be in New York to sign up for a library card. Please try to sign up again when you are in another location.</string>
    <string name="check_location_again">Check location again</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="new_york_success">We have successfully determined that you are in New York!</string>
    <string name="location_permission_prompt">SimplyE needs access to your location in order to create a library card.</string>
    <string name="location_access_error">SimplyE cannot access your device\'s location, configure your location settings to continue.</string>

    <!-- Accessibility -->
    <string name="nypl_logo">NYPL Logo</string>

    <!-- Errors -->
    <string name="card_granted">Card granted</string>
    <string name="card_created">Card created</string>
    <string name="create_card_error">There was an error creating your card\n<b>Error code: %1$d</b></string>
    <string name="validate_address_error">There was an error validating your address\n<b>Error code: %1$d</b></string>
    <string name="validate_username_error">There was an error validating your username\n<b>Error code: %1$d</b></string>
    <string name="unavailable_username">This username is unavailable. Please try another.</string>
    <string name="create_card_general_error">There was an error creating your card.</string>
    <string name="juvenile_not_eligible">You don’t have the correct card type to make child accounts. Please contact gethelp@nypl.org if you believe this is in error.</string>
    <string name="juvenile_limit_reached">You have reached the limit of dependent cards you can receive via online application.</string>
    <string name="juvenile_eligibility_error">We were not able to determine if you can make child cards.</string>
    <string name="non_residential_address">This address is not residential.</string>
    <string name="unrecognized_address">Unrecognized address.</string>
    <string name="create_card_forbidden_not_in_new_york">Library cards are only available for residents of New York State or students and commuters working in New York City.</string>
    <string name="validate_address_general_error">There was an error validating your address.</string>
    <string name="validate_username_general_error">There was an error validating your username.</string>
    <string name="try_again">Try again</string>

</resources>
