<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.OutOfStateFragment">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header_error_tv"
                style="@style/WizardHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/out_of_state_address" />

            <TextView
                android:id="@+id/header_status_desc_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16sp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/out_of_state_subheader"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/address_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp">

                <RadioButton
                    android:id="@+id/work_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/work_in_ny" />

                <RadioButton
                    android:id="@+id/school_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/school_in_ny" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/prev_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/previous"
                android:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/next"
                android:textAllCaps="true" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
