<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.HomeAddressFragment">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header_error_tv"
                style="@style/WizardHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_address" />

            <TextView
                android:id="@+id/header_status_desc_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16sp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textSize="16sp" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:scrollbarStyle="outsideOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_street_1"
                    style="@style/WizardFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/street_1" />

                <EditText
                    android:id="@+id/et_street_1"
                    style="@style/WizardFormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/required" />

                <TextView
                    android:id="@+id/tv_street_2"
                    style="@style/WizardFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/street_2" />

                <EditText
                    android:id="@+id/et_street_2"
                    style="@style/WizardFormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/optional" />

                <TextView
                    android:id="@+id/tv_city"
                    style="@style/WizardFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city" />

                <EditText
                    android:id="@+id/et_city"
                    style="@style/WizardFormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/required" />


                <TextView
                    android:id="@+id/tv_state"
                    style="@style/WizardFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/state" />

                <Spinner
                    android:id="@+id/sp_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/required"
                    android:maxLength="2" />

                <TextView
                    android:id="@+id/tv_zip"
                    style="@style/WizardFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zip" />

                <EditText
                    android:id="@+id/et_zip"
                    style="@style/WizardFormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/required"
                    android:inputType="number"
                    android:maxLength="5" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/nav_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/prev_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/previous"
                android:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/next"
                android:textAllCaps="true" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/trans_white"
            android:clickable="true"
            android:visibility="gone"
            tools:ignore="KeyboardInaccessibleWidget">

            <TextView
                android:id="@+id/loading_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/checking_location"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/progress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>
