<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AccountInformationFragment">

        <TextView
            android:id="@+id/header_tv"
            style="@style/WizardHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/form_sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:scrollbarStyle="outsideOverlay"
            app:layout_constraintBottom_toTopOf="@id/footer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_tv"
            app:layout_constraintVertical_bias="0.1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/WizardFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/username_et"
                    style="@style/WizardFormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                    android:hint="@string/required"
                    android:maxLength="25" />

                <TextView
                    style="@style/WizardFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/password_et"
                    style="@style/WizardFormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/required"
                    android:maxLength="32"
                    tools:ignore="TextFields" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1">

            <TextView
                style="@style/WizardFooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:text="@string/username_desc"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/nav_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/prev_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/previous"
                    android:textAllCaps="true" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/next_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/next"
                    android:textAllCaps="true" />
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/trans_white"
            android:visibility="gone">

            <TextView
                android:id="@+id/loading_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/validating_username"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/progress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
